Add user role for whoami service (#1)
